# adb-turbo

./: .gitignore  README.md  adb_commands.py  app.py  build_static.py  cleanup.sh  config.py  profiles.py  pyproject.toml  pytest.ini  run.bat  run.sh  test_profiles_manual.py
.github/workflows/: deploy-pages.yml  test.yml
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: __init__.py  test_adb_commands.py  test_app.py  test_config.py
