[project]
name = "adb-turbo"
version = "1.0.0"
description = "A friendly web-based tool for Android performance optimization via ADB"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

